Return recurring task occurrences in tasks index
